--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
 <body>
 <h1>WAPH Team 25</h1>
 <p>This is a public page published for team 25</p>
+<h3>Student</h3>
+
+<p><strong>Name</strong>: Tejaswee Rayana</p>
+
+<p><strong>Email</strong>: rayanate@mail.uc.edu</p>
+
+<p><strong>Short-bio</strong>: Tejaswee Rayana has a great interest in coding. She wants to become a full-stack developer.</p>
+
+<img src="images/Teju_updated.jpg" />
+
+Portfolio URL: <a href="https://github.com/rayanate/waph-rayanate.git">Tejaswee Portfolio</a>a>
 </body>
 </html>
