--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <img src="images/Teju_updated.jpg" />
 
-Portfolio URL: <a href="https://github.com/rayanate/waph-rayanate.git">Tejaswee Portfolio</a>a>
+Portfolio URL: <a href="https://github.com/rayanate/waph-rayanate.git">Tejaswee Portfolio</a>
 </body>
 </html>
