--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <img src="images/Teju_updated.jpg" />
 <br />
-<a href="https://github.com/rayanate/waph-rayanate.git">Tejaswee Portfolio</a>
+<a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
 </body>
 </html>
