--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 <body>
 <h1>WAPH Team 25</h1>
 <p>This is a public page published for team 25</p>
-<h3>Student</h3>
+<h3>Team Leader</h3>
+
+<p><strong>Name</strong>: Giridhar Reddy Chittepu</p>
+
+<p><strong>Email</strong>: chittegy@mail.uc.edu</p>
+
+<img src="images/chittegy_headshot.jpg" />
+<br />
+<a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
+<h3>Team Member 1</h3>
 
 <p><strong>Name</strong>: Tejaswee Rayana</p>
 
