--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
 <img src="images/Teju_updated.jpg" />
 <br />
 <a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
+  <h3>Team Member 2</h3>
+
+<p><strong>Name</strong>: Yeshwanth Gudise</p>
+
+<p><strong>Email</strong>: gudiseyh@mail.uc.edu</p>
+
+<p><strong>Short-bio</strong>: Yeshwanth Gudise has a immense passion in computers. He wants to become a Data Engineer.</p>
+
+<img src="images/Teju_updated.jpg" />
+<br />
+<a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
 </body>
 </html>
