--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p><strong>Short-bio</strong>: Yeshwanth Gudise has a immense passion in computers. He wants to become a Data Engineer.</p>
 
-<img src="images/Teju_updated.jpg" />
+<img src="images/Yeshwanth_headshot.jpg" />
 <br />
 <a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
 </body>
