--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 
 <img src="images/Yeshwanth_headshot.jpg" />
 <br />
-<a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
+<a href="https://gudiseyh.github.io/">Yeshwanth Portfolio</a>
 </body>
 </html>
