--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p><strong>Email</strong>: gudiseyh@mail.uc.edu</p>
 
-<p><strong>Short-bio</strong>: Yeshwanth Gudise has a immense passion in computers. He wants to become a Data Engineer.</p>
+<p><strong>Short-bio</strong>: Yeshwanth Gudise has a immense passion in computers. He wants to become a Full Stack Developer.</p>
 
 <img src="images/Yeshwanth_headshot.jpg" />
 <br />
