--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 
 <p><strong>Email</strong>: rayanate@mail.uc.edu</p>
 
-<p><strong>Short-bio</strong>: Tejaswee Rayana has a great interest in coding. She wants to become a full-stack developer.</p>
-
 <img src="images/Teju_updated.jpg" />
 <br />
 <a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
@@ -32,10 +30,17 @@
 
 <p><strong>Email</strong>: gudiseyh@mail.uc.edu</p>
 
-<p><strong>Short-bio</strong>: Yeshwanth Gudise has a immense passion in computers. He wants to become a Full Stack Developer.</p>
-
 <img src="images/Yeshwanth_headshot.jpg" />
 <br />
 <a href="https://gudiseyh.github.io/">Yeshwanth Portfolio</a>
+  <h3>Team Member 3</h3>
+
+<p><strong>Name</strong>: Nagarjuna Chittimadugula</p>
+
+<p><strong>Email</strong>: chittina@mail.uc.edu</p>
+
+<img src="images/chittina_headshot.jpg" />
+<br />
+<a href="https://chittina.github.io/">Yeshwanth Portfolio</a>
 </body>
 </html>
