--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <p><strong>Email</strong>: chittegy@mail.uc.edu</p>
 
-<img src="images/chittegy_headshot.jpg" />
+<img src="images/chittegy_headshot.jpg" height=300 width=300/>
 <br />
 <a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
 <h3>Team Member 1</h3>
