--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 
 <img src="images/chittina_headshot.png" />
 <br />
-<a href="https://chittina.github.io/">Yeshwanth Portfolio</a>
+<a href="https://chittina.github.io/">Nagarjuna Portfolio</a>
 </body>
 </html>
