--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p><strong>Email</strong>: chittina@mail.uc.edu</p>
 
-<img src="images/chittina_headshot.png" />
+<img src="images/chttina_headshot.png" />
 <br />
 <a href="https://chittina.github.io/">Nagarjuna Portfolio</a>
 </body>
