--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <img src="images/chittegy_headshot.jpg" height=300 width=300/>
 <br />
-<a href="https://rayanate.github.io/">Tejaswee Portfolio</a>
+<a href="https://chittegy.github.io/">Giridhar Portfolio</a>
 <h3>Team Member 1</h3>
 
 <p><strong>Name</strong>: Tejaswee Rayana</p>
